Renamed the views index vievbag title to reflect the respective names of what each page will display.  Also added an mage to the home page :-)

--- a/AHTP/Views/Customers/Index.cshtml
+++ b/AHTP/Views/Customers/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AHTP.Models.Customer>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Customer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
