--- a/AHTP/Views/Deliveries/Index.cshtml
+++ b/AHTP/Views/Deliveries/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AHTP.Models.Delivery>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Deliveries";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
