--- a/AHTP/Views/DeliveryPaysheets/Index.cshtml
+++ b/AHTP/Views/DeliveryPaysheets/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AHTP.Models.DeliveryPaysheet>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Paysheet";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
