--- a/AHTP/Views/Orders/Index.cshtml
+++ b/AHTP/Views/Orders/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AHTP.Models.Order>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Orders";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
