--- a/AHTP/Views/Destinations/Index.cshtml
+++ b/AHTP/Views/Destinations/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AHTP.Models.Destination>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Destinations";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
