--- a/AHTP/Views/Shared/_Layout.cshtml
+++ b/AHTP/Views/Shared/_Layout.cshtml
@@ -15,6 +15,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 <a href="~/Login.aspx" class=" btn btn-default btn-flat btn-sm">Login</a>
                 <a href="~/LogOut.aspx" class="btn btn-default btn-flat btn-sm">Sign out</a>
@@ -22,8 +26,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                    <li>@Html.ActionLink("Deliveries", "Index", "Deliveries")</li>
+                    <li>@Html.ActionLink("Delivery Paysheets", "Index", "DeliveryPaysheets")</li>
+                    <li>@Html.ActionLink("Destinations", "Index", "Destinations")</li>
+                    <li>@Html.ActionLink("Drivers", "Index", "Drivers")</li>
+                    <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
                 </ul>
             </div>
         </div>
