updated changes to database

--- a/AHTP/Views/Shared/_Layout.cshtml
+++ b/AHTP/Views/Shared/_Layout.cshtml
@@ -40,9 +40,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-            <!-- Examples of creating a Datepicker -->
-            @Html.TextBox("YourTextBox", "", new { @class = "date-picker" })
+            <p>&copy; @DateTime.Now.Year - I-Tech Soulutons INC</p>
+            
         </footer>
     </div>
 
