alligned the imaged on the homescreen within the div

--- a/AHTP/Views/Home/About.cshtml
+++ b/AHTP/Views/Home/About.cshtml
@@ -6,3 +6,4 @@
 
 <h2>About</h2>
 
+<p class="lead">Anderson’s Haulage Services Ltd is the premier export/import cargo handlers in the region. We offer rental of high capacity containers for all your temporary storage needs. Our parent company Don Anderson Haulage, based in Ontario, has built a rich tradition of efficient service over the course of fifty years. Our aim is to stridently continue that tradition in Jamaica and attract international investments to the region.</p>
