Edited application information for views

--- a/AHTP/Views/DeliveryPaysheets/Index.cshtml
+++ b/AHTP/Views/DeliveryPaysheets/Index.cshtml
@@ -28,7 +28,7 @@
             @Html.DisplayNameFor(model => model.Customer.FirstName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Destination.DestinationFr)
+            @Html.DisplayNameFor(model => model.Destination.DestinationTo)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Driver.FirstName)
@@ -57,7 +57,7 @@
             @Html.DisplayFor(modelItem => item.Customer.FirstName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Destination.DestinationFr)
+            @Html.DisplayFor(modelItem => item.Destination.DestinationTo)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Driver.FirstName)
