--- a/AHTP/Views/Destinations/Index.cshtml
+++ b/AHTP/Views/Destinations/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    <h2>Destinations</h2>
+    <h2>Destination</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
