--- a/AHTP/Content/Site.css
+++ b/AHTP/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+	background-color:whitesmoke;
     
 }
 
@@ -23,4 +24,10 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+footer{
+
+	font-size:medium;
+	text-align:center;
 }
