--- a/AHTP/Views/Customers/Index.cshtml
+++ b/AHTP/Views/Customers/Index.cshtml
@@ -8,7 +8,7 @@
     <h2>Customer</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", new { @class = "btn btn-default btn-flat btn-sm" })
 </p>
 <table class="table">
     <tr>
