--- a/AHTP/Views/Shared/_Layout.cshtml
+++ b/AHTP/Views/Shared/_Layout.cshtml
@@ -20,8 +20,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+
                 <a href="~/Login.aspx" class=" btn btn-default btn-flat btn-sm">Login</a>
                 <a href="~/LogOut.aspx" class="btn btn-default btn-flat btn-sm">Sign out</a>
+
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -37,10 +39,12 @@
         </div>
     </div>
     <div class="container body-content">
+        <br/>
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - I-Tech Soulutons INC</p>
+
+            <p>&copy; @DateTime.Now.Year - Managed by I-Tech Soulutons Inc.</p>
             
         </footer>
     </div>
