--- a/AHTP/Views/DeliveryPaysheets/Details.cshtml
+++ b/AHTP/Views/DeliveryPaysheets/Details.cshtml
@@ -28,35 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Freight)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Freight)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeliveryCostID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeliveryCostID)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Customer.FirstName)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Customer.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Destination.DestinationFr)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Destination.DestinationFr)
         </dd>
 
         <dt>
@@ -68,11 +44,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TruckDetail.Type)
+            @Html.DisplayNameFor(model => model.Waiting.WaitingId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TruckDetail.Type)
+            @Html.DisplayFor(model => model.Waiting.WaitingId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Delivery.DeliveryId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Delivery.DeliveryId)
         </dd>
 
     </dl>
