--- a/AHTP/Views/Drivers/Index.cshtml
+++ b/AHTP/Views/Drivers/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<AHTP.Models.Driver>
 
 @{
-    ViewBag.Title = "Drivers";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Drivers</h2>
+<h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create",new { @class = "btn-default" })
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
