--- a/AHTP/Views/TruckDetails/Index.cshtml
+++ b/AHTP/Views/TruckDetails/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<AHTP.Models.TruckDetail>
 
 @{
-    ViewBag.Title = "Truck Details";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
