--- a/AHTP/Views/Customers/Index.cshtml
+++ b/AHTP/Views/Customers/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<AHTP.Models.Customer>
 
 @{
-    ViewBag.Title = "Customer";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    <h2>Customer</h2>
+<h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", new { @class = "btn btn-default btn-flat btn-sm" })
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
