--- a/AHTP/Views/Waitings/Create.cshtml
+++ b/AHTP/Views/Waitings/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AHTP.Models.TruckDetail
+﻿@model AHTP.Models.Waiting
 
 @{
     ViewBag.Title = "Create";
@@ -12,22 +12,22 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>TruckDetail</h4>
+        <h4>Waiting</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ExtraTimePerWait, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ExtraTimePerWait, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ExtraTimePerWait, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LicNum, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CostPerWait, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LicNum, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LicNum, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.CostPerWait, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CostPerWait, "", new { @class = "text-danger" })
             </div>
         </div>
 
