--- a/AHTP/Views/Waitings/Delete.cshtml
+++ b/AHTP/Views/Waitings/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AHTP.Models.Destination
+﻿@model AHTP.Models.Waiting
 
 @{
     ViewBag.Title = "Delete";
@@ -9,31 +9,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Destination</h4>
+    <h4>Waiting</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.DestinationTo)
+            @Html.DisplayNameFor(model => model.ExtraTimePerWait)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DestinationTo)
+            @Html.DisplayFor(model => model.ExtraTimePerWait)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DestinationFr)
+            @Html.DisplayNameFor(model => model.CostPerWait)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DestinationFr)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DestinationCost)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DestinationCost)
+            @Html.DisplayFor(model => model.CostPerWait)
         </dd>
 
     </dl>
