Updated date picker and identifirs

--- a/AHTP/Views/Deliveries/Index.cshtml
+++ b/AHTP/Views/Deliveries/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<AHTP.Models.Delivery>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Deliveries";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+    <h2>Deliveries</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
