--- a/AHTP/Views/Shared/_Layout.cshtml
+++ b/AHTP/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li>@Html.ActionLink("Delivery Paysheets", "Index", "DeliveryPaysheets")</li>
                     <li>@Html.ActionLink("Destinations", "Index", "Destinations")</li>
                     <li>@Html.ActionLink("Drivers", "Index", "Drivers")</li>
-                    <li>@Html.ActionLink("Orders", "Index", "Orders")</li>
+                    <li>@Html.ActionLink("TruckDetails", "Index", "TruckDetails")</li>
                 </ul>
             </div>
         </div>
