--- a/AHTP/Views/Destinations/Index.cshtml
+++ b/AHTP/Views/Destinations/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<AHTP.Models.Destination>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Destinations";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+    <h2>Destinations</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
