--- a/AHTP/Views/Waitings/Index.cshtml
+++ b/AHTP/Views/Waitings/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<AHTP.Models.Waiting>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Waiting";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Waiting</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
