--- a/AHTP/Views/Home/Index.cshtml
+++ b/AHTP/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="item">
-                    <img src="~/Content/img/Haulage2.png" alt="haulage2" style=" height: 100%; width: 100%; object-fit: contain">
+                    <img src="~/Content/img/Haulage2.png" alt="haulage2" style=" height: 100%; width: 100%; object-fit: contain; position:relative;">
                 </div>
 
                 <div class="item">
